[gd_scene load_steps=2 format=3 uid="uid://kae7o13aq1uu"]

[ext_resource type="Script" uid="uid://cv15lf72go8se" path="res://ui/WorkAssignment_UI.gd" id="1_rf2xp"]

[node name="WorkAssignment_UI" type="CanvasLayer"]
script = ExtResource("1_rf2xp")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
custom_minimum_size = Vector2(20, 20)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TotalPopLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2

[node name="AvailablePopLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Header"]
layout_mode = 2

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SlidersContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="ConfirmButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "End Year"
